--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <title></title>
 
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/bootstrap.css" rel="stylesheet">
     <link href="static/styles.css" rel="stylesheet">
+    <link href="static/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="static/bootstrap-social/bootstrap-social.css" rel="stylesheet">
 
 </head>
 <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" >
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -29,39 +31,54 @@
             <div class="form-group">
               <input type="password" placeholder="Password" class="form-control">
             </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
+            <a class="btn btn-social btn-facebook">
+                <i class="fa fa-facebook"></i>
+                Sign in with Facebook
+            </a>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
     </div>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="container well"style="margin-top: 60px; background-color: #C26153;">
+
+    <div class="container well" style="background-color: #C26153; margin-top: 80px;">
             <h1 class="text-center" style="color: #EFEEEA;">COMING SOON!</h1>
     </div>
+    <div class="container">
+        <img class="img-thumbnail" src="http://weplaydots.com/twodots/images/wallpapers/TwoDots_mountains_desktop.jpg">
+    </div>
+
+    <br/>
 
     <div class="container">
         <p>
             DORD is a social game where you can create dares and challenge people for credits.
             Sign up through Facebook and get ready to have some serious fun!
         </p>
-        <p><a class="btn btn-primary" role="button">Learn more &raquo;</a></p>
     </div>
+
+    <div class="container">
+        <hr/>
+    </div>
+
 
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
+          <img style="height: 200px;" class="img-thumbnail" src="http://payload284.cargocollective.com/1/5/176485/7993013/Two-Dots-Postcard-Illustration-Owen-Davey-Ice-Mountain-Snow-Flag.jpg">
           <h2>Create dares</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
+          <img style="height: 200px;" class="img-thumbnail" src="http://payload284.cargocollective.com/1/5/176485/7993013/Two-Dots-Postcard-Illustration-Owen-Davey-Adventure-Ship.jpg">
           <h2>Dare people or pay the price</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
+          <img style="height: 200px;" class="img-thumbnail" src="http://payload284.cargocollective.com/1/5/176485/7993013/Two-Dots-Postcard-Illustration-Owen-Davey-Ocean_Submarine-Underwater.jpg">
           <h2>Contribute to great causes</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
