updated landing page + new design pattern

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,85 +12,73 @@
 </head>
 <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" >
-      <div class="container">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" >
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">DORD</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <a class="btn btn-social btn-facebook">
-                <i class="fa fa-facebook"></i>
-                Sign in with Facebook
+            <a class="navbar-brand" href="#">
+                <img style="margin: 5px;background-color: #EFEEEA; border-radius: 15px;" class="img-rounded" src="{{ url_for('static', filename='media/dord_logo_1.png') }}" height="70px">
             </a>
-          </form>
-        </div><!--/.navbar-collapse -->
-      </div>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+           <li>
+               <button type="button" class="btn btn-social navbar-btn btn-facebook">
+                    <i class="fa fa-facebook"></i>
+                    Sign in with Facebook
+               </button>
+           </li>
+        </ul><!--/.navbar-collapse -->
     </div>
+</div>
 
 
-    <div class="container well" style="background-color: #C26153; margin-top: 80px;">
-            <h1 class="text-center" style="color: #EFEEEA;">COMING SOON!</h1>
-    </div>
-    <div class="container">
-        <img class="img-thumbnail" src="http://weplaydots.com/twodots/images/wallpapers/TwoDots_mountains_desktop.jpg">
-    </div>
-
-    <br/>
-
-    <div class="container">
-        <p>
-            DORD is a social game where you can create dares and challenge people for credits.
-            Sign up through Facebook and get ready to have some serious fun!
-        </p>
-    </div>
-
-    <div class="container">
-        <hr/>
-    </div>
+<div class="container " style="background-color: #C26153; margin-top: 100px;">
+    <h1 class="text-center" style="color: #EFEEEA;">COMING SOON!</h1>
+</div>
 
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
+<br/>
+
+<div class="container">
+    <h3>
+        DORD is a social game where you can create dares and challenge people for credits.
+        Sign up through Facebook and get ready to have some serious fun!
+    </h3>
+</div>
+
+<div class="container">
+    <hr/>
+</div>
+
+
+<div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
         <div class="col-md-4">
-          <img style="height: 200px;" class="img-thumbnail" src="http://payload284.cargocollective.com/1/5/176485/7993013/Two-Dots-Postcard-Illustration-Owen-Davey-Ice-Mountain-Snow-Flag.jpg">
-          <h2>Create dares</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <img style="height: 200px;" class="img-thumbnail" src="http://payload284.cargocollective.com/1/5/176485/7993013/Two-Dots-Postcard-Illustration-Owen-Davey-Ice-Mountain-Snow-Flag.jpg">
+            <h2>Create dares</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <img style="height: 200px;" class="img-thumbnail" src="http://payload284.cargocollective.com/1/5/176485/7993013/Two-Dots-Postcard-Illustration-Owen-Davey-Adventure-Ship.jpg">
-          <h2>Dare people or pay the price</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <img style="height: 200px;" class="img-thumbnail" src="http://payload284.cargocollective.com/1/5/176485/7993013/Two-Dots-Postcard-Illustration-Owen-Davey-Ocean_Submarine-Underwater.jpg">
-          <h2>Contribute to great causes</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <img style="height: 200px;" class="img-thumbnail" src="http://payload284.cargocollective.com/1/5/176485/7993013/Two-Dots-Postcard-Illustration-Owen-Davey-Adventure-Ship.jpg">
+            <h2>Dare people or pay the price</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
-      </div>
+        <div class="col-md-4">
+            <img style="height: 200px;" class="img-thumbnail" src="http://payload284.cargocollective.com/1/5/176485/7993013/Two-Dots-Postcard-Illustration-Owen-Davey-Ocean_Submarine-Underwater.jpg">
+            <h2>Contribute to great causes</h2>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p><a class="btn btn-success" href="#" role="button">View details &raquo;</a></p>
+        </div>
+    </div>
 
-      <hr>
+    <hr>
 
-      <footer>
+    <footer>
         <p>&copy; Dord 2014</p>
-      </footer>
-    </div> <!-- /container -->
+    </footer>
+</div> <!-- /container -->
 
 
 
@@ -98,7 +86,7 @@
 
 
 
-    <script src="static/jquery-1.11.1.min.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
+<script src="static/jquery-1.11.1.min.js"></script>
+<script src="static/js/bootstrap.min.js"></script>
 </body>
 </html>
