new logo for landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                <img style="margin: 5px;background-color: #EFEEEA; border-radius: 15px;" class="img-rounded" src="{{ url_for('static', filename='media/dord_logo_1.png') }}" height="70px">
+                <img style="margin: 5px;background-color: #EFEEEA; border-radius: 10px;" class="img-rounded" src="{{ url_for('static', filename='media/dord_logo_4.png') }}" height="70px">
             </a>
         </div>
         <ul class="nav navbar-nav navbar-right">
@@ -39,10 +39,10 @@
 <br/>
 
 <div class="container">
-    <h3>
-        DORD is a social game where you can create dares and challenge people for credits.
+    <h1>
+        <a href="#">DORD</a> is a social game where you can create dares and challenge people for credits.
         Sign up through Facebook and get ready to have some serious fun!
-    </h3>
+    </h1>
 </div>
 
 <div class="container">
